#521 Add new logo to wizard

--- a/interfaces/wizard/inc_top.tmpl
+++ b/interfaces/wizard/inc_top.tmpl
@@ -10,4 +10,6 @@
         <script type="text/javascript" src="../staticcfg/bootstrap/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <img id="logo" src="static/images/icon_sab.png" alt="SABnzbd" />
+        <div id="logo">
+            #include $webdir + "/../Config/templates/staticcfg/images/logo-full.svg"#
+        </div>
