--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -33,7 +33,7 @@
 
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/bootstrap/css/bootstrap.min.css" /> 
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/style.css?p=$pid" />
-    <link rel="shortcut icon" href="${root}staticcfg/ico/favicon.ico" />
+    <link rel="shortcut icon" href="${root}staticcfg/ico/favicon.ico?v=1.1.0" />
 
     <script type="text/javascript">
         // Keeping track of the form state
