--- a/interfaces/smpl/templates/main.tmpl
+++ b/interfaces/smpl/templates/main.tmpl
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="static/stylesheets/colorschemes/white.css?smpl$version"/>
   <!--#end if#-->
   <link href="rss?mode=history&apikey=$session" rel="alternate" type="application/rss+xml" title="SABnzbd History" />
-  <link rel="shortcut icon" href="./staticcfg/ico/favicon.ico" />
+  <link rel="shortcut icon" href="./staticcfg/ico/favicon.ico?v=1.1.0" />
   
   <meta name="apple-mobile-web-app-title" content="SABnzbd" />
   <link rel="apple-touch-icon" sizes="76x76" href="./staticcfg/ico/apple-touch-icon-76x76-precomposed.png" />
