--- a/interfaces/wizard/inc_top.tmpl
+++ b/interfaces/wizard/inc_top.tmpl
@@ -5,7 +5,7 @@
         <title>$T('wizard-quickstart')</title>
         <link rel="stylesheet" type="text/css" href="../staticcfg/bootstrap/css/bootstrap.min.css?pid=$version"/>
         <link rel="stylesheet" type="text/css" href="static/style.css?pid=$version"/>
-        <link rel="shortcut icon" href="../staticcfg/ico/favicon.ico" />
+        <link rel="shortcut icon" href="../staticcfg/ico/favicon.ico?v=1.1.0" />
         <script type="text/javascript" src="../staticcfg/js/jquery-1.11.2.min.js"></script>
         <script type="text/javascript" src="../staticcfg/bootstrap/js/bootstrap.min.js"></script>
     </head>
