--- a/interfaces/Plush/templates/_inc_header.tmpl
+++ b/interfaces/Plush/templates/_inc_header.tmpl
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" type="text/css" href="${path}static/stylesheets/jqueryui/overcast/jquery-ui-1.8.15.custom.css?$version"/>
   <link rel="stylesheet" type="text/css" href="${path}static/stylesheets/rateit/rateit.css"/>
-  <link rel="shortcut icon" type="image/ico" href="./staticcfg/ico/favicon.ico?v=1.1.0"/>
+  <link rel="shortcut icon" type="image/ico" href="${path}staticcfg/ico/favicon.ico?v=1.1.0"/>
   #if $color_scheme#
   <link rel="stylesheet" type="text/css" href="${path}static/stylesheets/colorschemes/$color_scheme/${color_scheme}.css?$version"/>
   #else#
@@ -23,11 +23,11 @@
   #end if#
 
   <meta name="apple-mobile-web-app-title" content="SABnzbd" />
-  <link rel="apple-touch-icon" sizes="76x76" href="./staticcfg/ico/apple-touch-icon-76x76-precomposed.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="./staticcfg/ico/apple-touch-icon-120x120-precomposed.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="./staticcfg/ico/apple-touch-icon-152x152-precomposed.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./staticcfg/ico/apple-touch-icon-180x180-precomposed.png" /> 
-  <link rel="apple-touch-icon" sizes="192x192" href="./staticcfg/ico/android-192x192.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="${path}staticcfg/ico/apple-touch-icon-76x76-precomposed.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="${path}staticcfg/ico/apple-touch-icon-120x120-precomposed.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="${path}staticcfg/ico/apple-touch-icon-152x152-precomposed.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="${path}staticcfg/ico/apple-touch-icon-180x180-precomposed.png" /> 
+  <link rel="apple-touch-icon" sizes="192x192" href="${path}staticcfg/ico/android-192x192.png" />
   
   <script type="text/javascript" src="${path}static/javascripts/lib.js?$version"></script>
 
