Change icon of 'Restore Defaults'

--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -32,7 +32,7 @@
                     </div>
                     <div class="field-pair">
                         <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
-                        <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-flash"></span> $T('button-restoreDefaults')</button>
+                        <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-asterisk"></span> $T('button-restoreDefaults')</button>
                     </div>
                 </fieldset>
             </div><!-- /col1 -->
@@ -69,7 +69,7 @@
                     </div>
                     <div class="field-pair">
                         <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
-                        <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-flash"></span> $T('button-restoreDefaults')</button>
+                        <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-asterisk"></span> $T('button-restoreDefaults')</button>
                     </div>
                 </fieldset>
             </div><!-- /col1 -->
@@ -161,7 +161,7 @@
                     </div>
                     <div class="field-pair">
                         <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
-                        <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-flash"></span> $T('button-restoreDefaults')</button>
+                        <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-asterisk"></span> $T('button-restoreDefaults')</button>
                     </div>
                 </fieldset>
             </div><!-- /col1 -->
@@ -287,7 +287,7 @@
                     </div>
                     <div class="field-pair">
                         <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
-                        <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-flash"></span> $T('button-restoreDefaults')</button>
+                        <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-asterisk"></span> $T('button-restoreDefaults')</button>
                     </div>
                 </fieldset>
             </div><!-- /col1 -->
@@ -330,7 +330,7 @@
                     </div>
                     <div class="field-pair">
                         <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
-                        <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-flash"></span> $T('button-restoreDefaults')</button>
+                        <button class="btn btn-default restoreDefaults"><span class="glyphicon glyphicon-asterisk"></span> $T('button-restoreDefaults')</button>
                     </div>
                 </fieldset>
             </div><!-- /col1 -->
