--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -75,7 +75,7 @@
             glitterTranslate.sendThanks = "$T('Glitter-sendThanks')";
             glitterTranslate.chooseFile = "$T('Glitter-chooseFile')";
             glitterTranslate.orphanedJobsMsg = "$T('explain-orphans')";
-            glitterTranslate.useCache = "$T('explain-cache_limitstr')";
+            glitterTranslate.useCache = "$T('explain-cache_limitstr').replace("64M", "256M").replace("128M", "512M")";
             glitterTranslate.noLocalStorage = "$T('Glitter-noLocalStorage')";
             glitterTranslate.updateAvailable = "$T('Glitter-updateAvailable')";
             glitterTranslate.defaultText = "$T('default')";
