Show server warnings seperatly

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -195,7 +195,7 @@
                                 <div class="row">
                                     <div class="col-sm-6"># $T('connections')</div>
                                     <div class="col-sm-6">
-                                        <span data-bind="html: isFinite(serveractiveconn()) ? serverconnections().length : serveractiveconn()"></span> / 
+                                        <span data-bind="text: serverconnections().length"></span> / 
                                         <span data-bind="text: servertotalconn"></span>
                                     </div>
                                 </div>
@@ -205,6 +205,15 @@
                                         <a href="#" data-bind="visible: !serveractive(), click: function() { \$parent.unblockServer(servername()) }" class="btn btn-default"><span class="glyphicon glyphicon-share-alt"></span> $T('Glitter-unblockServer')</a>
                                         <span class="glyphicon glyphicon-exclamation-sign"></span>
                                         <span data-bind="text: servererror()"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row" data-bind="visible: !isFinite(serveractiveconn())">
+                                    <div class="col-sm-12">
+                                        <div class="alert alert-warning ">
+                                        <a href="#" data-bind="visible: !serveractive(), click: function() { \$parent.unblockServer(servername()) }" class="btn btn-default"><span class="glyphicon glyphicon-share-alt"></span> $T('Glitter-unblockServer')</a>
+                                        <span class="glyphicon glyphicon-info-sign"></span>
+                                        <span data-bind="text: serveractiveconn()"></span>
                                         </div>
                                     </div>
                                 </div>
