--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -1,5 +1,5 @@
 <!--#set global $pane="Config"#-->
-<!--#set global $help_uri="configure-1-0"#-->
+<!--#set global $help_uri="configuration/1.0/configure"#-->
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <!--#from sabnzbd.newswrapper import HAVE_SSL#-->
@@ -83,7 +83,7 @@
                     </tr>
                     <tr>
                         <th scope="row">$T('menu-wiki') </th>
-                        <td><a href="http://wiki.sabnzbd.org/faq" target="_blank">http://wiki.sabnzbd.org/faq</a></td>
+                        <td><a href="https://sabnzbd.org/wiki/faq" target="_blank">https://sabnzbd.org/wiki/faq</a></td>
                     </tr>
                     <tr>
                         <th scope="row">$T('menu-forums') </th>
@@ -99,7 +99,7 @@
                     </tr>
                     <tr>
                         <th scope="row">$T('menu-issues') </th>
-                        <td><a href="http://wiki.sabnzbd.org/issues-1-0-0" target="_blank">http://wiki.sabnzbd.org/issues-1-0-0</a></td>
+                        <td><a href="https://sabnzbd.org/wiki/introduction/known-issues" target="_blank">https://sabnzbd.org/wiki/introduction/known-issues</a></td>
                     </tr>
                 </tbody>
             </table>
