--- a/interfaces/Config/templates/login/main.tmpl
+++ b/interfaces/Config/templates/login/main.tmpl
@@ -24,7 +24,7 @@
         <div class="account-wall">
             <div class="text-center logo-header">
                 <!--#include $webdir + "/staticcfg/images/logo-full.svg"#-->
-                <a href="http://wiki.sabnzbd.org/faq#why-login" target="_blank">
+                <a href="https://sabnzbd.org/wiki/faq#why-login" target="_blank">
                     <span class="glyphicon glyphicon-question-sign"></span>
                 </a>
             </div>
