Add PID to shutdown URL

--- a/interfaces/Plush/templates/_inc_modals.tmpl
+++ b/interfaces/Plush/templates/_inc_modals.tmpl
@@ -36,7 +36,7 @@
 
   <p><a href="status/disconnect?session=$session" class="juiButton">$T('link-forceDisc')</a></p>
   <p><a href="config/restart?session=$session" class="juiButton" id="sabnzbd_restart" rel="#echo $T('explain-Restart').replace("<br />","\n")#">$T('sch-restart')</a>
-    <a href="shutdown?session=$session" class="juiButton" id="sabnzbd_shutdown" rel="$T('shutdownOK?')">$T('sch-shutdown')</a></p>
+    <a href="shutdown?session=$session&amp;pid=$pid" class="juiButton" id="sabnzbd_shutdown" rel="$T('shutdownOK?')">$T('sch-shutdown')</a></p>
   <br/>
 
   $T('Plush-refreshRate'):
