--- a/interfaces/smpl/templates/main.tmpl
+++ b/interfaces/smpl/templates/main.tmpl
@@ -931,7 +931,7 @@ function invert()
 
 function shutdown()
 {
-  window.location='shutdown?session='+session;
+  window.location='shutdown?pid=$pid&session='+session;
 }
 
 function restart()
