--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -21,7 +21,7 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="port">$T('opt-port')</label>
-                    <input type="number" name="port" id="port" value="$port" size="8" />
+                    <input type="number" name="port" id="port" value="$port" size="8" data-original="$port" />
                     <span class="desc">$T('explain-port')</span>
                 </div>
                 <div class="field-pair">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="https_port">$T('opt-https_port')</label>
-                    <input type="number" name="https_port" id="https_port" value="$https_port" size="8" />
+                    <input type="number" name="https_port" id="https_port" value="$https_port" size="8" data-original="$https_port" />
                     <span class="desc">$T('explain-https_port')</span>
                 </div>
                 <div class="field-pair">
