--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -177,7 +177,7 @@
                                 <!-- ko foreach: { data: historyStatus.stage_log, afterRender: addHistoryStatusStuff } -->
                                 <div class="row">
                                     <div class="col-sm-2" data-bind="text: glitterTranslate.status[name()]"></div>
-                                    <div class="col-sm-10 history-status-modallink" data-bind="longText: actions"></div>
+                                    <div class="col-sm-10 history-status-modallink" data-bind="longText: actions, longTextType: name()"></div>
                                 </div>
                                 <!-- /ko -->
                             </div>
