--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -83,7 +83,7 @@
                     </tr>
                     <tr>
                         <th scope="row">$T('menu-wiki') </th>
-                        <td><a href="https://sabnzbd.org/wiki/faq" target="_blank">https://sabnzbd.org/wiki/faq</a></td>
+                        <td><a href="https://sabnzbd.org/wiki/" target="_blank">https://sabnzbd.org/wiki/</a></td>
                     </tr>
                     <tr>
                         <th scope="row">$T('menu-forums') </th>
