Add notification about (new) Glitter features

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -77,6 +77,7 @@
             glitterTranslate.orphanedJobsMsg = "$T('explain-orphans')";
             glitterTranslate.useCache = "$T('explain-cache_limitstr').replace("64M", "256M").replace("128M", "512M")";
             glitterTranslate.noLocalStorage = "$T('Glitter-noLocalStorage')";
+            glitterTranslate.glitterTips = "$T('Glitter-glitterTips')";
             glitterTranslate.updateAvailable = "$T('Glitter-updateAvailable')";
             glitterTranslate.defaultText = "$T('default')";
             glitterTranslate.noneText = "$T('None')";
