Move Rating-host setting to Switches page
For more visability and to show we support more than just OZnzb, if the indexer supports it.

--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -386,6 +386,10 @@
                         <span class="desc">$T('explain-rating_enable')</span>
                     </div>
                     <div class="field-pair">
+                        <label class="config" for="rating_host">$T('opt-rating_host')</label>
+                        <input type="text" name="rating_host" id="rating_host" value="$rating_host" />
+                    </div>
+                    <div class="field-pair">
                         <label class="config" for="rating_api_key">$T('opt-rating_api_key')</label>
                         <input type="text" name="rating_api_key" id="rating_api_key" value="$rating_api_key" />
                         <span class="desc">$T('explain-rating_api_key')</span>
