Use Enclosures also for size in RSS

--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -520,6 +520,7 @@ function urlencode(str) {
 
     \$('.testFeed').click(function(){
         var whichFeed = \$(this).attr("rel");
+        \$(this).attr('disabled', true)
         \$.ajax({
             type: "POST",
             url: "test_rss_feed",
