#649 Warnings in seperate tab when Tabbed Layout

--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -1,4 +1,4 @@
-<div class="history" id="history-tab" data-bind="visible: hasHistory() || displayTabbed()">
+<div class="history" id="history-tab" data-bind="visible: hasHistory() || displayTabbed()" style="display: none">
     <h2>$T('menu-history')</h2>
     <table class="table table-hover history-table paginated">
         <thead>
