#656 Move switches to Specials for Unrar/Unzip/7zip/FileJoin/TSJoin

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -68,6 +68,24 @@
                         <!--#end if#-->
                     </td>
                 </tr>
+                <!--#if not $have_unzip #-->
+                <tr>
+                    <th scope="row">$T('opt-enable_unzip'):</th>
+                    <td>
+                        <span class="label label-warning">$T('notAvailable')</span>
+                        <a href="${helpuri}installation/install-off-modules#toc8" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
+                    </td>
+                </tr>
+                <!--#end if#-->
+                <!--#if not $have_7zip #-->
+                <tr>
+                    <th scope="row">$T('opt-enable_7zip'):</th>
+                    <td>
+                        <span class="label label-warning">$T('notAvailable')</span>
+                        <a href="${helpuri}installation/install-off-modules#toc8" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
+                    </td>
+                </tr>
+                <!--#end if#-->
             </tbody>
         </table>
     </div>
