Force fail_hopeless_jobs to "enabled" by renaming it.
It's the best setting nowadays and most people don't change defaults.

--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -109,9 +109,9 @@
                         <span class="desc">$T('explain-pre_check')</span>
                     </div>
                     <div class="field-pair">
-                        <label class="config" for="fail_hopeless">$T('opt-fail_hopeless')</label>
-                        <input type="checkbox" name="fail_hopeless" id="fail_hopeless" value="1" <!--#if int($fail_hopeless) > 0 then 'checked="checked"' else ""#--> />
-                        <span class="desc">$T('explain-fail_hopeless')</span>
+                        <label class="config" for="fail_hopeless_jobs">$T('opt-fail_hopeless_jobs')</label>
+                        <input type="checkbox" name="fail_hopeless_jobs" id="fail_hopeless_jobs" value="1" <!--#if int($fail_hopeless_jobs) > 0 then 'checked="checked"' else ""#--> />
+                        <span class="desc">$T('explain-fail_hopeless_jobs')</span>
                     </div>
                     <div class="field-pair">
                         <label class="config" for="no_dupes">$T('opt-no_dupes')</label>
