--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -143,11 +143,13 @@
                 <div class="field-pair">
                     <label class="config" for="https_cert">$T('opt-https_cert')</label>
                     <input type="text" name="https_cert" id="https_cert" value="$https_cert" />
+                    <button class="btn btn-default generate_cert" title="$T('explain-new-cert')"><span class="glyphicon glyphicon-repeat"></span></button>
                     <span class="desc">$T('explain-https_cert')</span>
                 </div>
                 <div class="field-pair">
                     <label class="config" for="https_key">$T('opt-https_key')</label>
                     <input type="text" name="https_key" id="https_key" value="$https_key" />
+                    <button class="btn btn-default generate_cert" title="$T('explain-new-cert')"><span class="glyphicon glyphicon-repeat"></span></button>
                     <span class="desc">$T('explain-https_key')</span>
                 </div>
                 <div class="field-pair">
@@ -257,6 +259,29 @@
         // No save on this button click
         e.preventDefault();                        
     });
+
+    \$('.generate_cert').click(function(e) {
+        if(!confirm('$T('explain-new-cert')')) {
+            return;
+        }
+
+        // Submit request and then restart
+        $.ajax({
+            type: "POST",
+            url: "../../tapi",
+            data: { mode: 'config', name: 'regenerate_certs', apikey: \$('#apikey').val() },
+            success: function(msg) {
+                do_restart()
+            }
+        });
+
+        e.preventDefault();
+    })
+
+    // Only allow re-generate if default certs
+    if(\$('#https_cert').val() != 'server.cert') {
+        \$('.generate_cert').attr('disabled', 'disabled')
+    }
 });
 </script>
 
