--- a/interfaces/Glitter/templates/include_messages.tmpl
+++ b/interfaces/Glitter/templates/include_messages.tmpl
@@ -36,7 +36,7 @@
                 </tr>
             <!-- /ko -->
             <!-- ko if: !hasMessages() && displayTabbed() -->
-                <tr>
+                <tr class="table-messages-none">
                     <td>$T('none')</td>
                     <td></td>
                 </tr>
